--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --code-coverage",
-    "test:prod": "ng test --code-coverage --watchAll=false --browsers=ChromeHeadless",
+    "test:prod": "ng test --code-coverage --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint"
   },
   "private": true,
