--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,5 +13,5 @@ sonar.organization=isdi-coders-2023
 sonar.sources=./src
 
 sonar.test.inclusions=./src/**/*.test.*, ./src/**/*.spec.*
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions= src/**/*.spec.*, js/**/*.js,
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.coverage.exclusions= ./src/**/*.spec.*, ./js/**/*.js,
