--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,4 +14,4 @@ sonar.sources=src
 
 sonar.test.inclusions=src/**/*.test.*, src/**/*.spec.*
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.coverage.exclusions= src/**/*.spec.*, js/**/*.js, src/main.ts
+sonar.coverage.exclusions= src/**/*.spec.*, js/**/*.js, src/main.ts, src/app/*routing.*
