--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-
+.env
+environment.development.ts
 # Compiled output
 /dist
 /tmp
