--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,6 +9,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test --code-coverage",
     "test:prod": "ng test --code-coverage --watch=false --browsers=ChromeHeadless",
+    "config": "ts-node src/environments/set-env.js",
     "lint": "ng lint"
   },
   "private": true,
@@ -37,14 +39,17 @@
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
+    "dotenv": "^16.0.3",
     "eslint": "^8.33.0",
     "husky": "^8.0.3",
     "jasmine-core": "~4.5.0",
+    "jsonwebtoken": "^9.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   }
 }
