--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "jose": "^4.13.1",
     "karma-mocha-reporter": "^2.2.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -43,7 +44,6 @@
     "eslint": "^8.33.0",
     "husky": "^8.0.3",
     "jasmine-core": "~4.5.0",
-    "jsonwebtoken": "^9.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
