Add firebase config

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "bootstrap": "^4.6.1",
     "jose": "^4.13.1",
     "karma-mocha-reporter": "^2.2.5",
     "rxjs": "~7.8.0",
@@ -41,11 +42,13 @@
     "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~15.2.3",
     "@angular/compiler-cli": "^15.2.0",
+    "@angular/fire": "^7.5.0",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "5.48.2",
     "dotenv": "^16.0.3",
     "eslint": "^8.33.0",
+    "firebase": "^9.18.0",
     "husky": "^8.0.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
