Update imports and build config

--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,8 @@
           },
           "configurations": {
             "production": {
+              "buildOptimizer": true,
+              "optimization": true,
               "budgets": [
                 {
                   "type": "initial",
