--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 .env
-environment.development.ts
+
+*environment.*
 # Compiled output
 /dist
 /tmp
