--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -21,5 +21,6 @@ jobs:
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
+          FIREBASE_API_KEY: ${{secrets.FIREBASE_API_KEY}}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
